--- a/view/Calendar.phtml
+++ b/view/Calendar.phtml
@@ -199,7 +199,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <form id="addEventForm">
+                <form id="addUpdateEventForm">
                     <div class="modal-body">
                         <div class="col-md-12">
                             <div class="form-group row">
